# pico-clion-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  openocd_pico.cfg
src/: main.c
